Fixed the width of tooltips for Bulk Actions: on My Account page: tooltips for bulk Export Network, Share, Delete go beyound the left border of screen in case browser window is too wide.
Added tooltip for bulk Add to My Sets button.

--- a/app/styles/ndex-angular-site.css
+++ b/app/styles/ndex-angular-site.css
@@ -1372,6 +1372,6 @@ div.featuredCollectionDescriptionArea {
     line-height: 1.3em !important;
 }
 
-.disabledButtonWithCleanTooltip .tooltip-inner {
+.buttonWithCleanTooltip .tooltip-inner {
     max-width: 200px;
 }
